tests/Liz/logs/256QAM_SNR0.0_TDL-C_20260324_200347.txt
{Index exceeds array bounds.

Error in <a href="matlab:matlab.lang.internal.introspective.errorDocCallback('HARQEntity/dereferenceProcessIndex', '\\wsl.localhost\ubuntu\home\ramir\ee492_5gNR_sim\functions\HARQEntity.m', 333)" style="font-weight:bold">HARQEntity/dereferenceProcessIndex</a> (<a href="matlab: opentoline('\\wsl.localhost\ubuntu\home\ramir\ee492_5gNR_sim\functions\HARQEntity.m',333,0)">line 333</a>)
            obj.HARQProcessID = obj.HarqProcessIDOrder(obj.HarqProcessIndex);       % Current HARQ process ID
                                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error in <a href="matlab:matlab.lang.internal.introspective.errorDocCallback('HARQEntity', '\\wsl.localhost\ubuntu\home\ramir\ee492_5gNR_sim\functions\HARQEntity.m', 117)" style="font-weight:bold">HARQEntity</a> (<a href="matlab: opentoline('\\wsl.localhost\ubuntu\home\ramir\ee492_5gNR_sim\functions\HARQEntity.m',117,0)">line 117</a>)
            dereferenceProcessIndex(obj);
            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error in <a href="matlab:matlab.lang.internal.introspective.errorDocCallback('nr_dlsch_tx_rx_TEST', '\\wsl.localhost\ubuntu\home\ramir\ee492_5gNR_sim\tests\Liz\nr_dlsch_tx_rx_TEST.m', 113)" style="font-weight:bold">nr_dlsch_tx_rx_TEST</a> (<a href="matlab: opentoline('\\wsl.localhost\ubuntu\home\ramir\ee492_5gNR_sim\tests\Liz\nr_dlsch_tx_rx_TEST.m',113,0)">line 113</a>)
harqEntity = HARQEntity(0:NHARQProcesses-1,rvSeq,pdsch.NumCodewords);
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
} 
nr_dlsch_tx_rx_TEST
